tidy up analysis